--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,50 +1,61 @@
 header {
 	display: flex;
-	// justify-content: space-between;
 	flex-direction: column;
 	color: #ffffff;
 	width: 100%;
 	font-family: Lato, sans-serif;
 	height: auto;
-	// padding: 3rem;
 
 	.mojo {
 		display: flex;
 		padding: 3rem;
 		width: 100%;
-		background-color: red;
+		align-items: center;
 		.mojoText {
 			display: flex;
-			width: 20%;
+			justify-content: space-around;
+			width: 25%;
 			align-items: center;
-			background-color: green;
+			padding: 1rem;
 			.mojoImg {
-				width: 100%;
+				width: 50%;
 				border-radius: 50%;
 				& > img {
 					display: inline-block;
 					border-radius: 50%;
-					width: 100%;
-					height: 250px;
+					width: 15rem;
+					height: 15rem;
 				}
 			}
 		}
 
 		.mojoHeading {
 			display: flex;
-			width: 50%;
 			flex-direction: column;
+			align-content: center;
+			gap: 15px;
+			width: 50%;
+			& > h3 {
+				display: inline-block;
+				font-size: 3.5rem;
+			}
+			& > h4 {
+				display: inline-block;
+				font-size: 2.4rem;
+				font-weight: 400;
+				letter-spacing: 0.2rem;
+			}
 		}
 	}
 
 	.bell {
 		display: flex;
 		justify-content: flex-end;
-		width: 80%;
-		background-color: blue;
+		width: 75%;
 		padding-right: 2rem;
 		& > img {
 			width: 5%;
+			background: #ffffff;
 		}
 	}
 }
