--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -3,6 +3,5 @@
 	align-items: center;
 	justify-content: space-around;
 	width: 100%;
-	background-color: green;
-	// background-color: #181818;
+	background-color: #181818;
 }
