--- a/src/components/Sidebar/index.module.scss
+++ b/src/components/Sidebar/index.module.scss
@@ -3,6 +3,7 @@
 	background-color: blue;
 	height: 100%;
 	padding: 2rem;
-	border: 13px solid #000000;
-	border-radius: 1rem;
+	background-color: #181818;
+	border: 20px solid #000000;
+	border-radius: 4rem;
 }
