--- a/src/components/Content/index.module.scss
+++ b/src/components/Content/index.module.scss
@@ -1,9 +1,10 @@
 .content {
 	display: flex;
+	flex-direction: column;
 	width: 50%;
 	height: 100%;
-	background-color: green;
+	// background-color: #181818;
 	padding: 2rem;
-	border: 13px solid #000000;
-	border-radius: 1rem;
+	border: 20px solid #000000;
+	border-radius: 4rem;
 }
