--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -1,7 +1,9 @@
 .action {
 	display: flex;
+	justify-content: space-around;
 	width: 100%;
-	background-color: blue;
+	// background-color: blue;
+	background-color: #181818;
 
 	.tasks {
 		display: flex;
