--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -1,14 +1,18 @@
 .action {
 	display: flex;
 	justify-content: space-between;
+	// flex-direction: column;
 	width: 100%;
+	// height: 50%;
 	background-color: blue;
 	font-family: "Lato", sans-serif;
 	// background-color: #181818;
 
 	.taskTable {
 		display: flex;
-		justify-content: center;
+		border-radius: 2rem;
+
+		// justify-content: center;
 		// justify-content: space-between;
 		padding: 1rem;
 		flex-direction: column;
@@ -17,14 +21,17 @@
 
 		.tasks {
 			display: flex;
-			justify-content: left;
-			width: 80%;
+			align-items: center;
+			font-size: 1.6rem;
+
+			// justify-content: left;
+			width: 100%;
 			background-color: red;
 		}
 	}
 
 	.taskIcon {
-		width: 50%;
+		width: 15%;
 		img {
 			display: inline-block;
 			width: 40px;
@@ -33,6 +40,10 @@
 		.taskText {
 			display: 50%;
 			width: 50%;
+			text-align: center;
+
+			font-family: "Lato", sans-serif;
+			color: #ffffff;
 			background-color: green;
 		}
 	}
@@ -40,6 +51,6 @@
 	.addTasks {
 		display: flex;
 		width: 50%;
-		background-color: green;
+		background-color: blue;
 	}
 }
