--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -37,16 +37,33 @@
 
 		.taskCounter {
 			display: flex;
-			flex-direction: column;
+			// flex-direction: column;
 			width: 100%;
-			padding: 3rem;
-			background-color: green;
+			padding: 3rem 0rem 3rem 0rem;
+			align-items: center;
+			background-color: #252525;
 			border-radius: 2rem;
 			.taskCounterHeading {
 				display: flex;
 				flex-direction: column;
+				width: 50%;
+				// padding: 2rem 0 2rem 0;
+				align-items: center;
+				// justify-content: space-evenly;
+				background-color: blue;
+				& > h2 {
+					padding-bottom: 1rem;
+					font-size: 2.5rem;
+					letter-spacing: 0.09rem;
+				}
+
+				& > p {
+					font-size: 2rem;
+					letter-spacing: 0.09rem;
+				}
 			}
 		}
+		// Tack counter with precentage circle
 	}
 	.taskIcon {
 		width: 15%;
