--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -38,6 +38,7 @@
 		.taskCounter {
 			display: flex;
 			// flex-direction: column;
+			justify-content: space-between;
 			width: 100%;
 			padding: 3rem 0rem 3rem 0rem;
 			align-items: center;
@@ -64,6 +65,15 @@
 			}
 		}
 		// Tack counter with precentage circle
+
+		.precentageCircle {
+			padding-right: 2rem;
+			.fg {
+				transform: rotate(-90deg);
+				transform-origin: 125px 125px;
+				padding-right: 2rem;
+			}
+		}
 	}
 	.taskIcon {
 		width: 15%;
