--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -43,6 +43,7 @@
 			padding: 3rem 0rem 3rem 0rem;
 			align-items: center;
 			background-color: #252525;
+			background-color: green;
 			border-radius: 2rem;
 			.taskCounterHeading {
 				display: flex;
@@ -66,13 +67,37 @@
 		}
 		// Tack counter with precentage circle
 
-		.precentageCircle {
-			padding-right: 2rem;
-			.fg {
-				transform: rotate(-90deg);
-				transform-origin: 125px 125px;
-				padding-right: 2rem;
+		.circularProgressContainer {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 50%;
+			background-color: yellow;
+			align-content: center;
+			.circularProgress {
+				position: relative;
+				height: 100px;
+				width: 100px;
+				border-radius: 50%;
+				background: conic-gradient(#000 3.6deg, #f76702 0deg);
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
+			.progressValue {
+				position: relative;
+				color: #fff;
+				font-size: 1rem;
+			}
+		}
+
+		.circularProgress::before {
+			content: "";
+			position: absolute;
+			height: 80px;
+			width: 80px;
+			background-color: #252525;
+			border-radius: 50%;
 		}
 	}
 	.taskIcon {
@@ -89,7 +114,7 @@
 
 			font-family: "Lato", sans-serif;
 			color: #ffffff;
-			background-color: green;
+			// background-color: green;
 		}
 	}
 
