--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -69,6 +69,7 @@
 		.circularProgressContainer {
 			display: flex;
 			justify-content: center;
+			flex-direction: column;
 			align-items: center;
 			width: 50%;
 			background-color: yellow;
