--- a/src/components/ProgressBar/index.module.scss
+++ b/src/components/ProgressBar/index.module.scss
@@ -9,13 +9,12 @@
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	// width: 50%;
+	width: 100%;
 	background-color: yellow;
 	align-content: center;
 	.circleBackground {
 		fill: none;
 		stroke: #000;
-		// stroke: #f76702;
 	}
 	.circleProgress {
 		fill: none;
