--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -71,7 +71,7 @@
 			flex-direction: column;
 			align-items: center;
 			width: 50%;
-			background-color: yellow;
+			// background-color: yellow;
 			align-content: center;
 		}
 	}
