--- a/src/components/ProgressBar/index.module.scss
+++ b/src/components/ProgressBar/index.module.scss
@@ -3,3 +3,40 @@
 // 	--color2: #c471ed;
 // 	--color3: #f64f59;
 // }
+
+.progressBar {
+	// display: flex;
+	background-color: #181818;
+	display: grid;
+	place-content: center;
+	// min-height: 100vh;
+
+	.circularProgress {
+		position: relative;
+		height: 100px;
+		width: 100px;
+		background: conic-gradient(#f76702 50deg, #000 0deg);
+		border-radius: 50%;
+	}
+	.circularProgress::before {
+		content: "";
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 80px;
+		height: 80px;
+		background-color: #252525;
+		border-radius: 50%;
+		transform: translate(-50%, -50%);
+	}
+}
+
+// .circularProgress::before {
+// 	content: "";
+// 	position: absolute;
+// 	top: 50%;
+// 	left: 50%;
+// 	width: 250px;
+// 	height: 250px;
+// 	background-color: yellow;
+// }
