--- a/src/components/ProgressBar/index.module.scss
+++ b/src/components/ProgressBar/index.module.scss
@@ -5,38 +5,33 @@
 // }
 
 .progressBar {
-	// display: flex;
-	background-color: #181818;
 	display: grid;
 	place-content: center;
-	// min-height: 100vh;
 
 	.circularProgress {
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		position: relative;
-		height: 100px;
-		width: 100px;
-		background: conic-gradient(#f76702 50deg, #000 0deg);
+		height: 90px;
+		width: 90px;
+		background: conic-gradient(#000 300deg, #f76702 0deg);
 		border-radius: 50%;
+		.progressValue {
+			display: flex;
+			position: absolute;
+			color: #fff;
+		}
 	}
 	.circularProgress::before {
 		content: "";
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		width: 80px;
-		height: 80px;
+		width: 70px;
+		height: 70px;
 		background-color: #252525;
 		border-radius: 50%;
 		transform: translate(-50%, -50%);
 	}
 }
-
-// .circularProgress::before {
-// 	content: "";
-// 	position: absolute;
-// 	top: 50%;
-// 	left: 50%;
-// 	width: 250px;
-// 	height: 250px;
-// 	background-color: yellow;
-// }
