--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -1,7 +1,9 @@
 .addTasks {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	flex-direction: column;
+	font-family: "Lato", sans-serif;
+
 	width: 35%;
 	margin-left: 1rem;
 	border-radius: 2rem;
@@ -11,8 +13,30 @@
 		align-items: center;
 		width: 100%;
 		height: 30%;
-		background-color: yellow;
-		// height: auto;
+		background-color: #f76702;
+		border-radius: 2rem;
+		margin-bottom: 1rem;
+		& > h1 {
+			display: block;
+			color: #fff;
+			width: 100%;
+			text-align: center;
+			font-size: 3rem;
+			border-radius: inherit;
+		}
+
+		.taskHead {
+			display: flex;
+			align-items: center;
+			align-content: center;
+			height: 100%;
+			width: 100%;
+			& > h2 {
+				display: block;
+				margin: auto;
+				color: #fff;
+			}
+		}
 	}
 
 	.greeting {
@@ -21,14 +45,29 @@
 		align-items: center;
 		width: 100%;
 		height: 65%;
-		background-color: green;
+		border-radius: 2rem;
+		background-color: #e2e2e2;
 		.awesomeImg {
 			display: flex;
+			object-fit: cover;
 			justify-content: center;
+			background-color: #e2e2e2;
+			border-radius: inherit;
 			width: 100%;
+			padding-bottom: 1rem;
 			& > img {
-				width: 500px;
+				object-fit: cover;
+				background-color: #e2e2e2;
+				padding-top: 0.8rem;
+				width: 200px;
 			}
+		}
+
+		& > h2 {
+			display: block;
+			text-align: center;
+			letter-spacing: 0.3rem;
+			font-weight: 300;
 		}
 	}
 }
