--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -1,6 +1,8 @@
 .upcomingTasks {
 	display: flex;
 	width: 100%;
-	background-color: red;
+	// background-color: #181818;
+
+	// background-color: red;
 	height: 50%;
 }
