--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -23,6 +23,7 @@
 			text-align: center;
 			font-size: 3rem;
 			border-radius: inherit;
+			cursor: pointer;
 		}
 
 		.taskHead {
@@ -35,6 +36,7 @@
 				display: block;
 				margin: auto;
 				color: #fff;
+				cursor: pointer;
 			}
 		}
 	}
