--- a/src/components/AddNewTaskHandler/index.module.scss
+++ b/src/components/AddNewTaskHandler/index.module.scss
@@ -1,28 +1,52 @@
-.todoInput {
+.tasksContainer {
 	display: flex;
+	justify-content: center;
 	align-items: center;
-	margin-bottom: 20px;
-	& > input {
-		padding: 10px 20px;
-		font-size: 16px;
-		background-color: #61dafb;
-		color: white;
-		border: none;
-		border-radius: 4px;
-		cursor: pointer;
+	align-content: centre;
+	width: 100%;
+	height: 50%;
+	background-color: #f76702;
+	border-radius: 2rem 2rem 0 0;
+	// background-color: green;
+	.todoInput {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		text-align: center;
+		width: 90%;
+		height: 60%;
+		margin: 1rem;
+		// background-color: blue;
+		margin-bottom: 20px;
+		& > input {
+			border-radius: 0.8rem;
+			margin-right: 1rem;
+			text-align: center;
+			height: 100%;
+			// padding: 10px 20px;
+			font-size: 16px;
+			width: 80%;
+			background-color: #e2e2e2;
+			color: white;
+			border: none;
+			cursor: pointer;
+		}
+		& > button {
+			text-align: center;
+			width: 20%;
+			height: 100%;
+			// padding: 10px 20px;
+			border-radius: 0.8rem;
+			font-size: 16px;
+			background-color: #181818;
+			color: white;
+			border: none;
+			cursor: pointer;
+		}
 	}
-	& > button {
-		padding: 10px 20px;
-		font-size: 16px;
-		background-color: red;
-		color: white;
-		border: none;
-		border-radius: 4px;
-		cursor: pointer;
-	}
-}
 
-.todo-list {
-	list-style: none;
-	padding: 0;
+	.todo-list {
+		list-style: none;
+		padding: 0;
+	}
 }
