--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -10,12 +10,19 @@
 	.upcomingTasksHeader {
 		display: flex;
 		width: 100%;
-		background-color: blue;
+		background-color: #181818;
 	}
 	.tasksContainer {
 		display: flex;
 		width: 100%;
 		background-color: yellow;
+	}
+
+	.todoList {
+		width: 40%;
+		background-color: yellow;
+		list-style: none;
+		padding: 0;
 	}
 }
 
