--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -4,6 +4,7 @@
 	width: 100%;
 	font-family: "Lato", sans-serif;
 	// background-color: #181818;
+	// flex-direction: ;
 
 	.taskContainer {
 		display: flex;
