--- a/src/components/Content/index.module.scss
+++ b/src/components/Content/index.module.scss
@@ -1,6 +1,8 @@
 .content {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	// text-align: center;
 	width: 50%;
 	height: 100%;
 	padding: 2rem;
