--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -3,7 +3,7 @@
 	justify-content: space-evenly;
 	flex-direction: column;
 	font-family: "Lato", sans-serif;
-	width: 35%;
+	// width: 35%;
 	margin-left: 1rem;
 	border-radius: 2rem;
 	.addTask {
