--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -1,6 +1,7 @@
 .addTasks {
 	display: flex;
 	justify-content: space-evenly;
+	gap: 1rem;
 	flex-direction: column;
 	font-family: "Lato", sans-serif;
 	// width: 35%;
