--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -1,8 +1,8 @@
 .action {
 	display: grid;
-	grid-gap: 1rem;
+	grid-gap: 2rem;
 	grid-template-rows: auto;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1.5fr 1fr;
 	justify-content: space-between;
 	width: 100%;
 	font-family: "Lato", sans-serif;
@@ -13,7 +13,8 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		// width: 60%;
+		gap: 1rem;
+		// width: 100%;
 		.taskTable {
 			display: flex;
 			border-radius: 2rem;
