--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -3,10 +3,12 @@
 	width: 100%;
 	flex-direction: column;
 	// background-color: #181818;
-
-	// background-color: red;
+	background-color: red;
 	height: 50%;
 
+	.headerH1 {
+		font-size: 5rem;
+	}
 	.upcomingTasksHeader {
 		display: flex;
 		width: 100%;
