--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -1,12 +1,14 @@
 .addTasks {
 	display: flex;
 	justify-content: space-evenly;
+	align-items: center;
+	text-align: center;
 	gap: 1rem;
 	flex-direction: column;
 	font-family: "Lato", sans-serif;
-	// width: 35%;
-	margin-left: 1rem;
+	width: 100%;
 	border-radius: 2rem;
+	// background-color: yellow;
 	.addTask {
 		display: flex;
 		flex-direction: column;
