--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -1,18 +1,21 @@
 .upcomingTasks {
 	display: flex;
+	justify-content: space-between;
 	width: 100%;
 	flex-direction: column;
-	// background-color: #181818;
+	background-color: #181818;
 	background-color: red;
-	height: 50%;
 
 	.headerH1 {
 		font-size: 5rem;
 	}
 	.upcomingTasksHeader {
 		display: flex;
+		justify-content: space-between;
 		width: 100%;
-		background-color: #181818;
+		background-color: red;
+		// background-color: #181818;
+		color: #fff;
 	}
 	.tasksContainer {
 		display: flex;
@@ -26,6 +29,10 @@
 		list-style: none;
 		padding: 0;
 	}
+}
+
+span {
+	// font-size: 2rem;
 }
 
 /*
