--- a/src/components/Action/index.module.scss
+++ b/src/components/Action/index.module.scss
@@ -1,13 +1,12 @@
 .action {
 	display: flex;
-	// grid-template-columns: 1fr 1fr;
+	justify-content: space-between;
 	gap: 2rem;
 	flex-wrap: wrap;
 	flex-grow: 2;
-	// justify-content: space-between;
 	width: 100%;
 	font-family: "Lato", sans-serif;
-	// background-color: #181818;
+	background-color: #181818;
 
 	.taskContainer {
 		display: flex;
