--- a/src/components/TodoWrapper/index.module.scss
+++ b/src/components/TodoWrapper/index.module.scss
@@ -5,7 +5,7 @@
 	flex-wrap: wrap;
 	flex-grow: 2;
 	width: 100%;
-	font-family: "Lato", sans-serif;
+	font-family: 'Lato', sans-serif;
 	background-color: #181818;
 
 	.taskContainer {
@@ -27,6 +27,7 @@
 				align-items: center;
 				font-size: 1.6rem;
 				width: 100%;
+				margin: 0.5rem;
 			}
 		}
 		.taskHeading {
@@ -88,7 +89,7 @@
 			// width: 50%;
 			text-align: center;
 
-			font-family: "Lato", sans-serif;
+			font-family: 'Lato', sans-serif;
 			color: #ffffff;
 		}
 	}
