--- a/src/components/Inputs/index.module.scss
+++ b/src/components/Inputs/index.module.scss
@@ -35,3 +35,9 @@
 	border-radius: 6px;
 	transition: all 0.375s;
 }
+
+// Add new Task css
+.addTaskWrapper {
+	width: 90%;
+	background-color: #333;
+}
