--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -5,28 +5,32 @@
 	text-align: center;
 	gap: 1rem;
 	flex-direction: column;
-	font-family: "Lato", sans-serif;
+	font-family: 'Lato', sans-serif;
 	width: 100%;
 	border-radius: 2rem;
 	// background-color: yellow;
 	.addTask {
 		display: flex;
+		justify-content: space-between;
 		flex-direction: column;
+		gap: 1rem;
 		align-items: center;
+		padding: 1rem;
 		width: 100%;
 		height: 35%;
 		background-color: #f76702;
 		border-radius: 2rem;
 		margin-bottom: 1rem;
-		& > h1 {
+		& > button {
 			display: block;
 			color: #fff;
-			width: 100%;
+			width: 30%;
 			text-align: center;
 			font-size: 3rem;
 			border-radius: inherit;
 			cursor: pointer;
-			caret-color: transparent;
+			background-color: #181818;
+			// padding: 0.1rem;
 		}
 
 		.taskHead {
