--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -11,7 +11,7 @@
 	// background-color: yellow;
 	.addTask {
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		flex-direction: column;
 		gap: 1rem;
 		align-items: center;
@@ -35,17 +35,28 @@
 			// padding: 0.1rem;
 		}
 
-		.taskHead {
+		.addTaskBtn {
 			display: flex;
+			flex-direction: column;
 			align-items: center;
-			align-content: center;
-			height: 100%;
-			width: 100%;
-			& > h2 {
-				display: block;
-				margin: auto;
-				color: #fff;
+			width: 50%;
+			color: #fff;
+			& > button {
+				display: flex;
+				flex: column;
+				background: none;
+				border: none;
+				// margin: 0;
+				padding: 0;
 				cursor: pointer;
+				color: #fff;
+				font-size: 1.8rem;
+				// padding-bottom: 0.5rem;
+			}
+
+			& > h2 {
+				// padding-bottom:s 1rem;
+				letter-spacing: 0.09rem;
 			}
 		}
 	}
