--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -58,7 +58,21 @@
 				// padding-bottom:s 1rem;
 				letter-spacing: 0.09rem;
 			}
+			.btnRemoveTask {
+				width: 50px;
+				height: 40px;
+				text-align: center;
+				margin: auto;
+				background-color: black;
+			}
 		}
+
+		.btnRemoveTask {
+			width: 30px;
+			height: 40px;
+			background-color: black;
+		}
+		// btnRemoveTask
 	}
 
 	.greeting {
