--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -38,49 +38,24 @@
 	}
 
 	.todoList {
-		width: 40%;
-		background-color: yellow;
 		list-style: none;
 		padding: 0;
 	}
+
+	.todoList li {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		background-color: #333;
+		padding: 10px;
+		border-radius: 4px;
+		margin-bottom: 10px;
+		min-width: 200px; /* Set a minimum width for the list items */
+	}
 }
 
-/*
-
-
-
-
-.todo-input button {
-  padding: 10px 20px;
-  font-size: 16px;
-  background-color: #61dafb;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+button {
+	width: 50px;
+	height: 50px;
+	background-color: blue;
 }
-
-.todo-list {
-  list-style: none;
-  padding: 0;
-}
-
-.todo-list li {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #333;
-  padding: 10px;
-  border-radius: 4px;
-  margin-bottom: 10px;
-  min-width: 200px; /* Set a minimum width for the list items */
-// }
-
-// .todo-list li button {
-//   background-color: #ff6c6c;
-//   color: white;
-//   border: none;
-//   padding: 10px;
-//   border-radius: 4px;
-//   cursor: pointer;
-// }
