--- a/src/components/Inputs/index.module.scss
+++ b/src/components/Inputs/index.module.scss
@@ -1,3 +1,35 @@
+// Add new Task css
+.addTaskWrapper {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+	font-family: 'Lato', sans-serif;
+	.inputAddTask {
+		width: 70%;
+		padding: 1rem;
+		border-radius: 1rem;
+	}
+
+	.addTaskBtn {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		color: #fff;
+		width: 30%;
+		& > button {
+			width: 60%;
+			flex: column;
+			text-align: center;
+			align-items: center;
+
+			background: #fff;
+			border: 1px;
+			border-radius: 1rem;
+			font-size: 0.9rem;
+		}
+	}
+}
+
 .checkboxWrapper *,
 .checkboxWrapper *::before,
 .checkboxWrapper *::after {
@@ -34,16 +66,4 @@
 	border: 3px solid #252525;
 	border-radius: 6px;
 	transition: all 0.375s;
-}
-
-// Add new Task css
-.addTaskWrapper {
-	display: flex;
-	justify-content: center;
-	width: 100%;
-	.inputAddTask {
-		width: 90%;
-		padding: 1rem;
-		border-radius: 1rem;
-	}
 }
