--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -54,8 +54,8 @@
 	}
 }
 
-button {
-	width: 50px;
-	height: 50px;
-	background-color: blue;
-}
+// button {
+// 	width: 50px;
+// 	height: 50px;
+// 	background-color: blue;
+// }
