--- a/src/components/Inputs/AddNewTodo/index.module.scss
+++ b/src/components/Inputs/AddNewTodo/index.module.scss
@@ -7,21 +7,38 @@
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	background-color: inherit;
 	border: none;
+	.toggleButton {
+		// width: 100px;
+		background-color: inherit;
+		border: none;
+		z-index: -2;
+		font-size: 1rem;
+		letter-spacing: 0.09rem;
+		color: #fff;
+	}
 
 	.todoForm {
-		background-color: inherit;
-		// border: none;
+		// background-color: sblue;
+		border: none;
 		// background-color: red;
+
 		.inputTodo {
 			padding: 10px;
 			width: 100%;
 			border: 1px solid #ccc;
-			border-radius: 4px;
+			border-radius: 8px;
 		}
 	}
 
 	.btnAddTodo {
-		// background-color: yellow;s
+		background-color: inherit;
 		border: none;
+		display: block;
+		width: 100%;
 	}
 }
+// button {
+// 	width: 120px;
+// 	height: 40px;
+// 	background-color: #fff;
+// }
