--- a/src/components/Inputs/AddNewTodo/index.module.scss
+++ b/src/components/Inputs/AddNewTodo/index.module.scss
@@ -1,5 +1,9 @@
 .addNewTodoContainer {
-	max-width: 600px;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	max-width: 100%;
+	font-family: 'Lato', sans-serif;
 	// margin: 0 auto;
 	// padding: 20px;
 	background-color: #f9f9f9;
@@ -18,6 +22,9 @@
 	}
 
 	.todoForm {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		// background-color: sblue;
 		border: none;
 		// background-color: red;
@@ -34,7 +41,12 @@
 		background-color: inherit;
 		border: none;
 		display: block;
-		width: 100%;
+		width: 90%;
+		padding: 5px;
+		color: #fff;
+		font-size: 1.3rem;
+		background-color: grey;
+		border-radius: 0.4rem;
 	}
 }
 // button {
