--- a/src/components/buttons/index.module.scss
+++ b/src/components/buttons/index.module.scss
@@ -20,3 +20,15 @@
 		letter-spacing: 0.09rem;
 	}
 }
+
+.hideFormBtn {
+	background-color: inherit;
+	border: none;
+	display: block;
+	width: 100%;
+	padding: 5px;
+	color: #fff;
+	font-size: 1rem;
+	background-color: grey;
+	border-radius: 0.4rem;
+}
