--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -21,89 +21,74 @@
 		background-color: #f76702;
 		border-radius: 2rem;
 		margin-bottom: 1rem;
-		& > button {
-			width: 40%;
-			display: block;
-			padding: 0.5rem;
-			color: #000;
-			text-align: center;
-			font-size: 1rem;
-			border: none;
-			border-radius: 1rem;
-			cursor: pointer;
-			background-color: #e2e2e2;
-			// padding: 0.1rem;
-		}
-
-		.addTaskBtn {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			width: 50%;
-			color: #fff;
-			& > button {
-				display: flex;
-				flex: column;
-				background: none;
-				border: none;
-				// margin: 0;
-				padding: 0;
-				cursor: pointer;
-				color: #fff;
-				font-size: 1.8rem;
-				// padding-bottom: 0.5rem;
-			}
-
-			& > h2 {
-				// padding-bottom:s 1rem;
-				letter-spacing: 0.09rem;
-			}
-			.btnRemoveTask {
-				width: 50px;
-				height: 40px;
-				text-align: center;
-				margin: auto;
-				background-color: black;
-			}
-		}
-
-		.btnRemoveTask {
-			width: 30px;
-			height: 40px;
-			background-color: black;
-		}
-		// btnRemoveTask
 	}
 
-	.greeting {
+	.addTaskBtn {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		width: 100%;
-		height: 65%;
-		border-radius: 2rem;
-		background-color: #e2e2e2;
-		.awesomeImg {
-			display: flex;
-			object-fit: cover;
-			justify-content: center;
-			background-color: #e2e2e2;
-			border-radius: inherit;
-			width: 100%;
-			padding-bottom: 1rem;
-			& > img {
-				object-fit: cover;
-				background-color: #e2e2e2;
-				padding-top: 0.8rem;
-				width: 200px;
-			}
+		color: #fff;
+		& > span {
+			display: block;
+			border: none;
+			padding: 0;
+			cursor: pointer;
+			color: #fff;
+			font-size: 2.8rem;
 		}
 
-		& > h2 {
-			display: block;
-			text-align: center;
-			letter-spacing: 0.3rem;
-			font-weight: 300;
+		h3 {
+			font-size: 1.4rem;
+			letter-spacing: 0.1rem;
+			// background-color: red;
 		}
+
+		.btnRemoveTask {
+			width: 50px;
+			height: 40px;
+			text-align: center;
+			margin: auto;
+			background-color: black;
+		}
+	}
+
+	.btnRemoveTask {
+		width: 30px;
+		height: 40px;
+		background-color: black;
+	}
+	// btnRemoveTask
+}
+
+.greeting {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	height: 65%;
+	border-radius: 2rem;
+	background-color: #e2e2e2;
+	.awesomeImg {
+		display: flex;
+		object-fit: cover;
+		justify-content: center;
+		background-color: #e2e2e2;
+		border-radius: inherit;
+		width: 100%;
+		padding-bottom: 1rem;
+		& > img {
+			object-fit: cover;
+			background-color: #e2e2e2;
+			padding-top: 0.8rem;
+			width: 200px;
+		}
+	}
+
+	& > h2 {
+		display: block;
+		text-align: center;
+		letter-spacing: 0.3rem;
+		font-weight: 300;
 	}
 }
