--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -31,31 +31,20 @@
 			}
 		}
 	}
-	.tasksContainer {
+	.upcomingTasksContainer {
 		display: flex;
 		width: 100%;
-		background-color: yellow;
+		// background-color: yellow;
 	}
 
-	.todoList {
-		list-style: none;
-		padding: 0;
-	}
-
-	.todoList li {
+	.upcomingTasksContainer ul {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		background-color: #333;
+		// background-color: #333;
 		padding: 10px;
 		border-radius: 4px;
 		margin-bottom: 10px;
-		min-width: 200px; /* Set a minimum width for the list items */
+		min-width: 200px;
 	}
 }
-
-// button {
-// 	width: 50px;
-// 	height: 50px;
-// 	background-color: blue;
-// }
