--- a/src/components/UpcomingTasks/index.module.scss
+++ b/src/components/UpcomingTasks/index.module.scss
@@ -4,8 +4,6 @@
 	width: 100%;
 	flex-direction: column;
 	background-color: #181818;
-	background-color: red;
-
 	.headerH1 {
 		font-size: 5rem;
 	}
@@ -34,14 +32,16 @@
 	.upcomingTasksContainer {
 		display: flex;
 		width: 100%;
-		// background-color: yellow;
+		align-items: center;
+		padding: 10px;
+		border-radius: 4px;
+		margin-bottom: 10px;
+		// min-width: 200px;
 	}
 
 	.upcomingTasksContainer ul {
-		display: flex;
-		justify-content: space-between;
 		align-items: center;
-		// background-color: #333;
+		width: 100%;
 		padding: 10px;
 		border-radius: 4px;
 		margin-bottom: 10px;
