--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -5,7 +5,7 @@
 	text-align: center;
 	gap: 1rem;
 	flex-direction: column;
-	font-family: 'Lato', sans-serif;
+	font-family: "Lato", sans-serif;
 	width: 100%;
 	border-radius: 2rem;
 	// background-color: yellow;
@@ -60,5 +60,31 @@
 		text-align: center;
 		letter-spacing: 0.3rem;
 		font-weight: 300;
+	}
+
+	.todoInput {
+		display: flex;
+		width: 100%;
+		flex-direction: column;
+		align-items: center;
+
+		// margin-bottom: 10px;
+
+		input {
+			padding: 7px;
+			font-size: 16px;
+			border: 1px solid #ccc;
+			border-radius: 6px;
+			// margin-right: 10px;
+			// flex: 1;
+		}
+	}
+
+	button {
+		width: 70%;
+		padding: 0.3rem;
+		border: none;
+		border-radius: 6px;
+		margin-top: 0.5rem;
 	}
 }
