--- a/src/components/AddTasks/index.module.scss
+++ b/src/components/AddTasks/index.module.scss
@@ -8,6 +8,8 @@
 	font-family: "Lato", sans-serif;
 	width: 100%;
 	border-radius: 2rem;
+	background-color: #f76702;
+
 	// background-color: yellow;
 	.addTask {
 		display: flex;
